--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -17,3 +17,6 @@ databaseChangeLog:
 - include:
     file: incrementales-v0_1_4.yml
     relativeToChangelogFile: true
+- include:
+    file: incrementales-v0_2.yml
+    relativeToChangelogFile: true
